@@ -1,5 +1,6 @@
 Changes
 examples/create_and_print_form.pl
+examples/create_and_print_item.pl
 examples/create_and_print_lexeme.pl
 examples/create_and_print_mediainfo_snak.pl
 examples/create_and_print_mediainfo_snak_translated.pl
